--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Taste.it - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Taste.it</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
+
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
+		rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/animate.css">
-	
+
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
@@ -19,37 +21,44 @@
 	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
 	<link rel="stylesheet" href="css/jquery.timepicker.css">
 
-	
+
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 	<div class="wrap">
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
+					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span
+							class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
 				</div>
 				<div class="col-12 col-md d-flex justify-content-md-end">
 					<p class="mb-0">Mon - Fri / 9:00-21:00, Sat - Sun / 10:00-20:00</p>
 					<div class="social-media">
 						<p class="mb-0 d-flex">
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span
+									class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span
+									class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span
+									class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span
+									class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
 						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Taste.<span>it</span></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
 
@@ -67,7 +76,7 @@
 		</div>
 	</nav>
 	<!-- END nav -->
-	
+
 	<section class="hero-wrap">
 		<div class="home-slider owl-carousel js-fullheight">
 			<div class="slider-item js-fullheight" style="background-image:url(images/bg_1.jpg);">
@@ -102,7 +111,7 @@
 		</div>
 	</section>
 
-	
+
 
 	<section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">
 		<div class="container">
@@ -177,7 +186,12 @@
 								</div>
 							</div>
 							<div class="pl-lg-3 ml-md-5">
-								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came
+									from it would have been rewritten a thousand times and everything that was left from
+									its origin would be the word "and" and the Little Blind Text should turn around and
+									return to its own, safe country. A small river named Duden flows by their place and
+									supplies it with the necessary regelialia. It is a paradisematic country, in which
+									roasted parts of sentences fly into your mouth.</p>
 							</div>
 						</div>
 					</div>
@@ -415,7 +429,7 @@
 						<span class="flat flaticon-ice-cream" style="right: 0;"></span>
 					</div>
 				</div>
-				
+
 				<div class="col-md-6 col-lg-4">
 					<div class="menu-wrap">
 						<div class="heading-menu text-center ftco-animate">
@@ -539,7 +553,8 @@
 						<div class="item">
 							<div class="testimony-wrap text-center">
 								<div class="text p-3">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p class="mb-4">Far far away, behind the word mountains, far from the countries
+										Vokalia and Consonantia, there live the blind texts.</p>
 									<div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
 										<span class="quote d-flex align-items-center justify-content-center">
 											<i class="fa fa-quote-left"></i>
@@ -553,7 +568,8 @@
 						<div class="item">
 							<div class="testimony-wrap text-center">
 								<div class="text p-3">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p class="mb-4">Far far away, behind the word mountains, far from the countries
+										Vokalia and Consonantia, there live the blind texts.</p>
 									<div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
 										<span class="quote d-flex align-items-center justify-content-center">
 											<i class="fa fa-quote-left"></i>
@@ -567,7 +583,8 @@
 						<div class="item">
 							<div class="testimony-wrap text-center">
 								<div class="text p-3">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p class="mb-4">Far far away, behind the word mountains, far from the countries
+										Vokalia and Consonantia, there live the blind texts.</p>
 									<div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
 										<span class="quote d-flex align-items-center justify-content-center">
 											<i class="fa fa-quote-left"></i>
@@ -581,7 +598,8 @@
 						<div class="item">
 							<div class="testimony-wrap text-center">
 								<div class="text p-3">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p class="mb-4">Far far away, behind the word mountains, far from the countries
+										Vokalia and Consonantia, there live the blind texts.</p>
 									<div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
 										<span class="quote d-flex align-items-center justify-content-center">
 											<i class="fa fa-quote-left"></i>
@@ -595,7 +613,8 @@
 						<div class="item">
 							<div class="testimony-wrap text-center">
 								<div class="text p-3">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p class="mb-4">Far far away, behind the word mountains, far from the countries
+										Vokalia and Consonantia, there live the blind texts.</p>
 									<div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
 										<span class="quote d-flex align-items-center justify-content-center">
 											<i class="fa fa-quote-left"></i>
@@ -611,7 +630,7 @@
 			</div>
 		</div>
 	</section>
-	
+
 	<section class="ftco-section bg-light">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-2">
@@ -619,7 +638,7 @@
 					<span class="subheading">Chef</span>
 					<h2 class="mb-4">Our Master Chef</h2>
 				</div>
-			</div>	
+			</div>
 			<div class="row">
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="staff">
@@ -708,7 +727,9 @@
 					<div class="heading-section ftco-animate mb-5">
 						<span class="subheading">This is our secrets</span>
 						<h2 class="mb-4">Perfect Ingredients</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+							there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
+							Semantics, a large language ocean.
 						</p>
 						<p><a href="#" class="btn btn-primary">Learn more</a></p>
 					</div>
@@ -728,14 +749,16 @@
 			<div class="row">
 				<div class="col-md-4 ftco-animate">
 					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+						<a href="blog-single.html" class="block-20"
+							style="background-image: url('images/image_1.jpg');">
 						</a>
 						<div class="text px-4 pt-3 pb-4">
 							<div class="meta">
 								<div><a href="#">August 3, 2020</a></div>
 								<div><a href="#">Admin</a></div>
 							</div>
-							<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+							<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the
+									blind texts</a></h3>
 							<p class="clearfix">
 								<a href="#" class="float-left read btn btn-primary">Read more</a>
 								<a href="#" class="float-right meta-chat"><span class="fa fa-comment"></span> 3</a>
@@ -745,14 +768,16 @@
 				</div>
 				<div class="col-md-4 ftco-animate">
 					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+						<a href="blog-single.html" class="block-20"
+							style="background-image: url('images/image_2.jpg');">
 						</a>
 						<div class="text px-4 pt-3 pb-4">
 							<div class="meta">
 								<div><a href="#">August 3, 2020</a></div>
 								<div><a href="#">Admin</a></div>
 							</div>
-							<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+							<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the
+									blind texts</a></h3>
 							<p class="clearfix">
 								<a href="#" class="float-left read btn btn-primary">Read more</a>
 								<a href="#" class="float-right meta-chat"><span class="fa fa-comment"></span> 3</a>
@@ -762,14 +787,16 @@
 				</div>
 				<div class="col-md-4 ftco-animate">
 					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+						<a href="blog-single.html" class="block-20"
+							style="background-image: url('images/image_3.jpg');">
 						</a>
 						<div class="text px-4 pt-3 pb-4">
 							<div class="meta">
 								<div><a href="#">August 3, 2020</a></div>
 								<div><a href="#">Admin</a></div>
 							</div>
-							<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+							<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the
+									blind texts</a></h3>
 							<p class="clearfix">
 								<a href="#" class="float-left read btn btn-primary">Read more</a>
 								<a href="#" class="float-right meta-chat"><span class="fa fa-comment"></span> 3</a>
@@ -798,7 +825,8 @@
 				<div class="col-md-6 col-lg-3">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Taste.it</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+							there live the blind texts. Separated they live in Bookmarksgrove</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -847,7 +875,8 @@
 						<p>Far far away, behind the word mountains, far from the countries.</p>
 						<form action="#" class="subscribe-form">
 							<div class="form-group">
-								<input type="text" class="form-control mb-2 text-center" placeholder="Enter email address">
+								<input type="text" class="form-control mb-2 text-center"
+									placeholder="Enter email address">
 								<input type="submit" value="Subscribe" class="form-control submit px-3">
 							</div>
 						</form>
@@ -859,35 +888,46 @@
 			<div class="row no-gutters">
 				<div class="col-md-12 text-center">
 
-					<p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-					</div>
+					<p class="mb-0">
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						Copyright &copy;
+						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
+						is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+							target="_blank">Colorlib</a>
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					</p>
 				</div>
 			</div>
-		</footer>
-		
-
-		<!-- loader -->
-		<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+		</div>
+	</footer>
 
 
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery-migrate-3.0.1.min.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jquery.easing.1.3.js"></script>
-		<script src="js/jquery.waypoints.min.js"></script>
-		<script src="js/jquery.stellar.min.js"></script>
-		<script src="js/owl.carousel.min.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="js/jquery.animateNumber.min.js"></script>
-		<script src="js/bootstrap-datepicker.js"></script>
-		<script src="js/jquery.timepicker.min.js"></script>
-		<script src="js/scrollax.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-		<script src="js/google-map.js"></script>
-		<script src="js/main.js"></script>
-		
-	</body>
-	</html>
+	<!-- loader -->
+	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+			<circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+			<circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+				stroke="#F96D00" />
+		</svg></div>
+
+
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="js/jquery.stellar.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/jquery.animateNumber.min.js"></script>
+	<script src="js/bootstrap-datepicker.js"></script>
+	<script src="js/jquery.timepicker.min.js"></script>
+	<script src="js/scrollax.min.js"></script>
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+	<script src="js/google-map.js"></script>
+	<script src="js/main.js"></script>
+
+</body>
+
+</html>
